--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A e-commerce Backend application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node develop/seed/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +22,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.5.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
   }
